Add coc.nvim and others to vim config

--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -33,7 +33,20 @@
   tags:
   - vim
 
-- name: execute vim-plug install
-  command: vim +PlugInstall +qall
+- name: install vim-plug
+  command: echo '' | vim +PlugInstall +qall
+  tags:
+  - vim
+
+- name: install vim coc-python
+  command: "echo '' | vim +'CocInstall {{ item }}' +qall"
+  loop:
+  - coc-emmet
+  - coc-highlight
+  - coc-json
+  - coc-python
+  - coc-snippets
+  - coc-tsserver
+  - coc-yaml
   tags:
   - vim
