--- a/vars/macos_defaults.yml
+++ b/vars/macos_defaults.yml
@@ -29,7 +29,7 @@ macos_defaults:
   value: 1
 - domain: com.apple.screensaver
   key: askForPasswordDelay
-  type: int
+  type: float
   value: 5
 
 # Show icons for drives and removable media
@@ -111,8 +111,8 @@ macos_defaults:
 # Tap to click
 - domain: com.apple.driver.AppleBluetoothMultitouch.trackpad
   key: Clicking
-  type: bool
-  value: true
+  type: int
+  value: 1
 - domain: NSGlobalDomain
   key: com.apple.mouse.tapBehavior
   type: int
