--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -7,11 +7,11 @@
   - nvm
 
 - name: install node lts
-  command: "source {{ nvm_path }}/nvm.sh && nvm install --lts"
+  command: "{{ nvm_path }}/nvm-exec install --lts"
   tags:
   - nvm
 
 - name: alias default node
-  command: "source {{ nvm_path }}/nvm.sh && nvm alias default node"
+  command: "{{ nvm_path }}/nvm-exec alias default node"
   tags:
   - nvm
