Register variable to use nvm npm when installing npm packages

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -10,6 +10,7 @@
 - name: install npm packages
   npm:
     name: "{{ item }}"
+    executable: "{{ nvm_npm.stdout_lines[-1] }}"
     global: yes
     state: present
   loop: "{{ npm_packages }}"
