Update spacemacs dotfile and comment out source code pro installation through homebrew

--- a/vars/homebrew.yml
+++ b/vars/homebrew.yml
@@ -25,7 +25,7 @@ homebrew_cask_apps:
 - docker
 - emacs
 - firefox
-- font-source-code-pro
+# - font-source-code-pro # TODO tap homebrew/cask-fonts first
 - google-chrome
 - gpg-suite
 - macvim
