--- a/vars/homebrew.yml
+++ b/vars/homebrew.yml
@@ -11,29 +11,26 @@ homebrew_packages:
 - grep
 - htop
 - jq
+- mysql
+- node@12
 - python3
 - readline
 - ripgrep
 - wget
 
-homebrew_packages_10_12:
-- mysql
-
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
 # - font-source-code-pro # TODO tap homebrew/cask-fonts first
+- authy
 - chromedriver
 - docker
 - emacs
 - firefox
 - google-chrome
 - gpg-suite
+- iterm2
 - macvim
 - slack
 - spotify
 - tunnelblick
 - visual-studio-code
-
-homebrew_cask_apps_10_12:
-- iterm2
-- karabiner-elements
