--- a/files/yabai/.skhdrc
+++ b/files/yabai/.skhdrc
@@ -1,53 +1,53 @@
-# open terminal
+# --- open terminal ---
 #cmd - return : /Applications/Kitty.app/Contents/MacOS/kitty --single-instance -d ~
 #cmd - return : open -a /Applications/iTerm.app
 cmd - return : osascript ~/Library/Scripts/new_iterm_window.scpt
 
-# focus window
+# --- focus window ---
 alt - h : yabai -m window --focus west
 alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
 
-# swap window
+# --- swap window ---
 shift + alt - h : yabai -m window --swap west
 shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
 
-# move window
+# --- move window ---
 shift + cmd - h : yabai -m window --warp west
 shift + cmd - j : yabai -m window --warp south
 shift + cmd - k : yabai -m window --warp north
 shift + cmd - l : yabai -m window --warp east
 
-# balance size of windows
+# --- balance size of windows ---
 shift + alt - 0 : yabai -m space --balance
 
-# make floating window fill screen
+# --- make floating window fill screen ---
 #shift + alt - up     : yabai -m window --grid 1:1:0:0:1:1
 
-# make floating window fill left-half of screen
+# --- make floating window fill left-half of screen ---
 #shift + alt - left   : yabai -m window --grid 1:2:0:0:1:1
 
-# make floating window fill right-half of screen
+# --- make floating window fill right-half of screen ---
 #shift + alt - right  : yabai -m window --grid 1:2:1:0:1:1
 
-# create desktop, move window and follow focus
-shift + alt - n : yabai -m space --create;\
-                  id=$(yabai -m query --displays --display | grep "spaces");\
-                  yabai -m window --space $(echo ${id:10:${#id}-10});\
-                  yabai -m space --focus $(echo ${id:10:${#id}-10})
+# --- create desktop, move window and follow focus ---
+#shift + alt - n : yabai -m space --create;\
+#                  id=$(yabai -m query --displays --display | grep "spaces");\
+#                  yabai -m window --space $(echo ${id:10:${#id}-10});\
+#                  yabai -m space --focus $(echo ${id:10:${#id}-10})
 
-# create desktop and follow focus
-cmd + alt - n : yabai -m space --create;\
-                id=$(yabai -m query --displays --display | grep "spaces");\
-                yabai -m space --focus $(echo ${id:10:${#id}-10})
+# --- create desktop and follow focus ---
+#cmd + alt - n : yabai -m space --create;\
+#                id=$(yabai -m query --displays --display | grep "spaces");\
+#                yabai -m space --focus $(echo ${id:10:${#id}-10})
 
-# destroy desktop
-cmd + alt - w : yabai -m space --destroy
+# --- destroy desktop ---
+#cmd + alt - w : yabai -m space --destroy
 
-# fast focus desktop
+# --- fast focus desktop ---
 #cmd + alt - x : yabai -m space --focus recent
 # these are currently keyboard shorcuts in settings due to SIP still being enabled
 #ctrl - left :   yabai -m space --focus prev
@@ -63,7 +63,7 @@ cmd + alt - w : yabai -m space --destroy
 #ctrl - 9 :      yabai -m space --focus 9
 #ctrl - 0 :      yabai -m space --focus 10
 
-# send window to desktop and follow focus
+# --- send window to desktop and follow focus ---
 #shift + ctrl - x :     yabai -m window --space recent; yabai -m space --focus recent
 shift + ctrl - left :  yabai -m window --space prev; yabai -m space --focus prev
 shift + ctrl - right : yabai -m window --space next; yabai -m space --focus next
@@ -78,91 +78,87 @@ shift + ctrl - 8 :     yabai -m window --space  8; yabai -m space --focus 8
 shift + ctrl - 9 :     yabai -m window --space  9; yabai -m space --focus 9
 shift + ctrl - 0 :     yabai -m window --space 10; yabai -m space --focus 10
 
-# focus monitor
-#ctrl + alt - x : yabai -m display --focus recent
-ctrl + alt - h : yabai -m display --focus prev
-ctrl + alt - l : yabai -m display --focus next
-ctrl + alt - 1 : yabai -m display --focus 1
-ctrl + alt - 2 : yabai -m display --focus 2
-ctrl + alt - 3 : yabai -m display --focus 3
-ctrl + alt - 4 : yabai -m display --focus 4
+# --- focus monitor ---
+#ctrl + alt - x     : yabai -m display --focus recent
+ctrl + alt - left  : yabai -m display --focus prev
+ctrl + alt - right : yabai -m display --focus next
+ctrl + alt - 1     : yabai -m display --focus 1
+ctrl + alt - 2     : yabai -m display --focus 2
+ctrl + alt - 3     : yabai -m display --focus 3
+ctrl + alt - 4     : yabai -m display --focus 4
 
-# send window to monitor and follow focus
-#shift + ctrl + alt - x : yabai -m window --display recent; yabai -m display --focus recent
-shift + ctrl + alt - h : yabai -m window --display prev; yabai -m display --focus prev
-shift + ctrl + alt - l : yabai -m window --display next; yabai -m display --focus next
-shift + ctrl + alt - 1 : yabai -m window --display 1; yabai -m display --focus 1
-shift + ctrl + alt - 2 : yabai -m window --display 2; yabai -m display --focus 2
-shift + ctrl + alt - 3 : yabai -m window --display 3; yabai -m display --focus 3
-shift + ctrl + alt - 4 : yabai -m window --display 4; yabai -m display --focus 4
+# --- send window to monitor and follow focus ---
+#shift + ctrl + alt - x     : yabai -m window --display recent; yabai -m display --focus recent
+shift + ctrl + alt - left  : yabai -m window --display prev; yabai -m display --focus prev
+shift + ctrl + alt - right : yabai -m window --display next; yabai -m display --focus next
+shift + ctrl + alt - 1     : yabai -m window --display 1; yabai -m display --focus 1
+shift + ctrl + alt - 2     : yabai -m window --display 2; yabai -m display --focus 2
+shift + ctrl + alt - 3     : yabai -m window --display 3; yabai -m display --focus 3
+shift + ctrl + alt - 4     : yabai -m window --display 4; yabai -m display --focus 4
 
-# move window
+# --- move window ---
 #shift + ctrl - a : yabai -m window --move rel:-20:0
 #shift + ctrl - s : yabai -m window --move rel:0:20
 #shift + ctrl - w : yabai -m window --move rel:0:-20
 #shift + ctrl - d : yabai -m window --move rel:20:0
 
-# increase window size
+# --- increase window size ---
 #shift + alt - a : yabai -m window --resize left:-20:0
 #shift + alt - s : yabai -m window --resize bottom:0:20
 #shift + alt - w : yabai -m window --resize top:0:-20
 #shift + alt - d : yabai -m window --resize right:20:0
 
-# decrease window size
+# --- decrease window size ---
 #shift + cmd - a : yabai -m window --resize left:20:0
 #shift + cmd - s : yabai -m window --resize bottom:0:-20
 #shift + cmd - w : yabai -m window --resize top:0:20
 #shift + cmd - d : yabai -m window --resize right:-20:0
 
-# set insertion point in focused container
-ctrl + alt - left  : yabai -m window --insert west
-ctrl + alt - down  : yabai -m window --insert south
-ctrl + alt - up    : yabai -m window --insert north
-ctrl + alt - right : yabai -m window --insert east
+# --- set insertion point in focused container ---
+ctrl + alt - h : yabai -m window --insert west
+ctrl + alt - j : yabai -m window --insert south
+ctrl + alt - k : yabai -m window --insert north
+ctrl + alt - l : yabai -m window --insert east
 
-# rotate tree
+# --- rotate tree ---
 ctrl + alt - r : yabai -m space --rotate 90
 
-# mirror tree y-axis
+# --- mirror tree y-axis ---
 ctrl + alt - y : yabai -m space --mirror y-axis
 
-# mirror tree x-axis
+# --- mirror tree x-axis ---
 ctrl + alt - x : yabai -m space --mirror x-axis
 
-# toggle desktop offset
+# --- toggle desktop offset ---
 cmd + alt - a : yabai -m space --toggle padding; yabai -m space --toggle gap
 
-# toggle window parent zoom
+# --- toggle window parent zoom ---
 cmd + alt - d : yabai -m window --toggle zoom-parent
 
-# toggle window fullscreen zoom
+# --- toggle window fullscreen zoom ---
 ctrl + alt - f : yabai -m window --toggle zoom-fullscreen
 
-# toggle window native fullscreen
+# --- toggle window native fullscreen ---
 #shift + alt - f : yabai -m window --toggle native-fullscreen
 
-# toggle window border
+# --- toggle window border ---
 cmd + alt - b : yabai -m window --toggle border
 
-# toggle window split type
+# --- toggle window split type ---
 ctrl + alt - e : yabai -m window --toggle split
 
-# float / unfloat window and center on screen
-#alt - t : yabai -m window --toggle float;\
-#          yabai -m window --grid 4:4:1:1:2:2
-#alt - space : yabai -m window --toggle float;\
-#              yabai -m window --grid 4:4:1:1:2:2
+# --- float / unfloat window and center on screen ---
+#     : was alt - space but now using that for iterm hotkey
 ctrl - space : yabai -m window --toggle float;\
                yabai -m window --grid 4:4:1:1:2:2
 
-# toggle sticky
+# --- toggle sticky ---
 cmd + alt - s : yabai -m window --toggle sticky
 
-# toggle sticky, float and resize to picture-in-picture size
+# --- toggle sticky, float and resize to picture-in-picture size ---
 #alt - p : yabai -m window --toggle sticky;\
 #          yabai -m window --grid 5:5:4:0:1:1
 
-# change layout of desktop
+# --- change layout of desktop ---
 ctrl + alt - a : yabai -m space --layout bsp
 ctrl + alt - d : yabai -m space --layout float
-
