Add spacebar into yabai setup

--- a/files/macos.conf.yml
+++ b/files/macos.conf.yml
@@ -16,5 +16,6 @@
     ~/.vimrc: vim/.vimrc
     ~/.yabairc: yabai/.yabairc
     ~/.skhdrc: yabai/.skhdrc
+    ~/.spacebarrc: yabai/.spacebarrc
     ~/Library/Scripts/new_iterm_window.scpt: yabai/new_iterm_window.scpt
     ~/Library/Application Support/Code/User/settings.json: code/settings.json
