--- a/files/yabai/.yabairc
+++ b/files/yabai/.yabairc
@@ -1,18 +1,5 @@
 #!/usr/bin/env sh
 
-# bar settings
-yabai -m config status_bar                   on
-yabai -m config status_bar_text_font         "Helvetica Neue:Bold:12.0"
-yabai -m config status_bar_icon_font         "FontAwesome:Regular:12.0"
-#yabai -m config status_bar_background_color  0xffd0d0d0
-#yabai -m config status_bar_foreground_color  0xff686868
-yabai -m config status_bar_background_color  0xff202020
-yabai -m config status_bar_foreground_color  0xffa8a8a8
-yabai -m config status_bar_space_icon_strip  I II III IV V VI VII VIII IX X
-yabai -m config status_bar_power_icon_strip   
-yabai -m config status_bar_space_icon        
-yabai -m config status_bar_clock_icon        
-
 # global settings
 yabai -m config mouse_follows_focus          on
 yabai -m config focus_follows_mouse          autofocus
@@ -35,11 +22,11 @@ yabai -m config mouse_action2                move
 
 # general space settings
 yabai -m config layout                       bsp
-yabai -m config top_padding                  10
+# yabai -m config top_padding                  10
+yabai -m config top_padding                  36
 yabai -m config bottom_padding               10
 yabai -m config left_padding                 10
 yabai -m config right_padding                10
 yabai -m config window_gap                    5
 
 echo "yabai configuration loaded.."
-
