Fix homebrew tag and move brew taps to vars

--- a/files/code/settings.json
+++ b/files/code/settings.json
@@ -13,7 +13,8 @@
     "gitlens.hovers.currentLine.enabled": false,
     "gitProjectManager.baseProjectsFolders": [
         "~/git",
-        "~/opt"
+        "~/opt",
+        "~/.dotfiles"
     ],
     "gitProjectManager.maxDepthRecursion": 2,
     "python.pythonPath": "python",
