--- a/files/macos.conf.yml
+++ b/files/macos.conf.yml
@@ -7,7 +7,7 @@
       relink: true
 
 - link:
-    ~/.ssh/config: ssh/config
+    ~/.ssh/config.d/main: ssh/main
     ~/.bash_aliases: sh/.bash_aliases
     ~/.bash_nag: sh/.bash_nag
     ~/.bashrc: sh/.bashrc
