--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,7 +6,7 @@ dotbot_bin: "{{ dotbot_path }}/bin/dotbot"
 dotbot_default_config: "{{ playbook_dir }}/files/arch.conf.yml"
 
 oh_my_zsh_path: ~/.oh-my-zsh
-oh_my_zsh_theme: gallois
+oh_my_zsh_theme: bleblanc
 oh_my_zsh_plugins:
 - aws
 - git
