--- a/vars/homebrew.yml
+++ b/vars/homebrew.yml
@@ -21,6 +21,7 @@ homebrew_packages:
 - jq
 - kubectl
 - kubectx
+- kubeseal
 - mysql
 - node@12
 - python3
@@ -28,6 +29,7 @@ homebrew_packages:
 - ripgrep
 - weaveworks/tap/eksctl
 - wget
+- yq
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
