Skip main ssh config because hardlink issues

--- a/files/macos.conf.yml
+++ b/files/macos.conf.yml
@@ -8,7 +8,7 @@
 
 - link:
     ~/.config/git/ignore: git/gitignore
-    ~/.ssh/config.d/main: ssh/main
+    #~/.ssh/config.d/main: ssh/main  # TODO make hardlink
     ~/.bash_aliases: sh/.bash_aliases
     ~/.bash_nag: sh/.bash_nag
     ~/.bashrc: sh/.bashrc
